# passenger-rating

./: .coveragerc  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  run_worker.py  settings.py
app/: app.py  database.py  models.py
app/handlers/: rating.py
core/: count_rating.py
my_rabbit/: __init__.py  broker.py  config.py  connection.py  message.py  worker.py
tests/: conftest.py
tests/handlers/: test_rating.py
tests/my_rabbit/: test_config.py  test_connection.py  test_message.py  test_worker.py
tests/workers/: test_add_rating.py
workers/: add_rating.py
